--- a/thesis/flyleaf.lyx
+++ b/thesis/flyleaf.lyx
@@ -293,7 +293,7 @@ Option : Mobile Destributed Computing (IRM)
 
 \series bold
 \size larger
-Proposal of an Advanced Retrieval System for Quranic Documents
+Proposal of an Advanced Retrieval System for Quran
 \end_layout
 
 \begin_layout Standard
